--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,3 @@
-/* CSS Custom Properties Definitions */
-
 :root {
   --maxWidth-none: "none";
   --maxWidth-xs: 20rem;
@@ -28,10 +26,10 @@
   --spacing-24: 6rem;
   --spacing-32: 8rem;
   --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
-    Times, serif;
+     Times, serif;
   --font-body: var(--fontFamily-serif);
   --font-heading: var(--fontFamily-sans);
   --fontWeight-normal: 400;
@@ -45,7 +43,6 @@
   --lineHeight-tight: 1.1;
   --lineHeight-normal: 1.5;
   --lineHeight-relaxed: 1.625;
-  /* 1.200 Minor Third Type Scale */
   --fontSize-0: 0.833rem;
   --fontSize-1: 1rem;
   --fontSize-2: 1.2rem;
@@ -54,21 +51,16 @@
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
-/*light-mode*/
   --color-primary: #CD104D;
   --color-text: #2e353f;
   --color-text-light: #4f5969;
-  --color-heading: #1a202c; 
+  --color-heading: #1a202c;
   --color-heading-black: #000000;
   --color-accent: #d1dce5;
   --color-background: #FFFFFF;
-
-  /*Dark Mode*/
   --dark-mode: #000;
   --dark-mode-hf: #CD104D;
 }
-
-/* HTML elements */
 
 *,
 :after,
@@ -89,33 +81,28 @@ body {
   color: var(--color-text);
   background-color: var(--color-background);
 }
-
-body.dark{
-  /* Dark Mode Class*/
+body.dark {
   --color-background: #171717;
   --color-primary: #CD104D;
   --color-text: #ffffff;
   --color-text-light: #4f5969;
-  --color-heading: #DFDFDE; 
+  --color-heading: #DFDFDE;
   --color-heading-black: #EDEDED;
   --color-accent: #d1dce5;
   --image: url("./images/sun.svg");
 }
-
-body.light{
-  /*light-mode*/
+body.light {
   --color-primary: #CD104D;
   --color-text: #2e353f;
   --color-text-light: #4f5969;
-  --color-heading: #1a202c; 
+  --color-heading: #1a202c;
   --color-heading-black: black;
   --color-accent: #d1dce5;
   --color-background: #FFFFFF;
   --image: url("./images/moon.svg");
 }
 
-/* Toggle switch css */
-.global-toggle-switch{
+.global-toggle-switch {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -133,17 +120,16 @@ body.light{
   border-radius: 50%;
   transition: background-color 0.3s ease-in-out, filter 0.3s ease-in-out;
 }
+#darkMode.clicked {
+  filter: none !important;
+  background-color: var(--dark-mode);
+}
 
 #darkMode:hover,
 #darkMode:focus {
   filter: none;
   background-color: var(--dark-mode-hf);
   cursor: pointer;
-}
-
-#darkMode.clicked {
-  filter: none !important;
-  background-color: var(--dark-mode);
 }
 
 footer {
@@ -155,8 +141,6 @@ hr {
   height: 1px;
   border: 0;
 }
-
-/* Heading */
 
 h1,
 h2,
@@ -185,6 +169,10 @@ h1 {
   font-size: var(--fontSize-6);
   color: var(--color-heading-black);
 }
+h1 > a {
+  color: inherit;
+  text-decoration: none;
+}
 
 h2 {
   font-size: var(--fontSize-5);
@@ -206,11 +194,6 @@ h6 {
   font-size: var(--fontSize-1);
 }
 
-h1 > a {
-  color: inherit;
-  text-decoration: none;
-}
-
 h2 > a,
 h3 > a,
 h4 > a,
@@ -219,8 +202,6 @@ h6 > a {
   text-decoration: none;
   color: inherit;
 }
-
-/* Prose */
 
 p {
   line-height: var(--lineHeight-relaxed);
@@ -249,11 +230,9 @@ ol li {
 li > p {
   margin-bottom: calc(var(--spacing-8) / 2);
 }
-
 li *:last-child {
   margin-bottom: var(--spacing-0);
 }
-
 li > ul {
   margin-left: var(--spacing-8);
   margin-top: calc(var(--spacing-8) / 2);
@@ -269,7 +248,6 @@ blockquote {
   font-style: italic;
   margin-bottom: var(--spacing-8);
 }
-
 blockquote > :last-child {
   margin-bottom: var(--spacing-0);
 }
@@ -285,12 +263,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0.25rem;
 }
-
 table thead tr th {
   border-bottom: 1px solid var(--color-accent);
 }
-
-/* Link */
 
 a {
   color: var(--color-primary);
@@ -301,15 +276,13 @@ a:focus {
   text-decoration: none;
 }
 
-/* Custom classes */
-
 .global-wrapper {
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
   padding: var(--spacing-10) var(--spacing-5);
 }
 
-.global-wrapper[data-is-root-path="true"] .bio {
+.global-wrapper[data-is-root-path=true] .bio {
   margin-bottom: var(--spacing-20);
 }
 
@@ -326,18 +299,15 @@ a:focus {
   margin-bottom: var(--spacing-8);
   margin-top: var(--spacing-8);
 }
-
 .post-list-item p {
   margin-bottom: var(--spacing-0);
 }
-
 .post-list-item h2 {
   font-size: var(--fontSize-4);
   color: var(--color-primary);
   margin-bottom: var(--spacing-2);
   margin-top: var(--spacing-0);
 }
-
 .post-list-item header {
   margin-bottom: var(--spacing-4);
 }
@@ -353,7 +323,6 @@ a:focus {
   display: flex;
   margin-bottom: var(--spacing-16);
 }
-
 .bio p {
   margin-bottom: var(--spacing-0);
 }
@@ -368,7 +337,6 @@ a:focus {
 .blog-post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
 }
-
 .blog-post header p {
   font-size: var(--fontSize-2);
   font-family: var(--font-heading);
@@ -382,15 +350,15 @@ a:focus {
   margin-bottom: var(--spacing-8);
 }
 
-/* Media queries */
-
 @media (max-width: 42rem) {
   blockquote {
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
     margin-left: var(--spacing-0);
   }
-  ul,
+  ul {
+    list-style-position: inside;
+  }
   ol {
     list-style-position: inside;
   }
-}
+}/*# sourceMappingURL=style.css.map */
